--- a/fashion_blog_exercise/fashion_blog_no_markup_starter/index.html
+++ b/fashion_blog_exercise/fashion_blog_no_markup_starter/index.html
@@ -1,4 +1,8 @@
-<!--
+    <!doctype html>
+    <html lang="en-us">
+    <head>
+    <meta charset="utf-8">
+    <!--
 
 * Add HTML tags to the page.
 
@@ -7,61 +11,94 @@
 * Try to use structural tags like <section>, <article> refer to this link: https://developer.mozilla.org/en/docs/Web/Guide/HTML/HTML5/HTML5_element_list
 
 -->
-    <!doctype html>
-    <head>
     <meta charset="utf-8">
     <title>Sartre's List</title>
-
+    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <link href='css/style.css' rel='stylesheet' type='text.css'>
     </head>
     <html>
     <body>
-    Sartre’s List
+    <div class="wrapper">
+    <header>
+        <logo>
+        <h1><a href="index.html">Sartre’s List</a></h1>
+        </logo>
+        <tagline>
+        <h2>Better-Dressed People</h2>
+        </tagline>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="#">Women’s</a></li>
+        <li><a href="#">Men’s</a></li>
+        <li><a href="#">On the Street</a></li>
+        <li><a href="#">The Catwalk</a></li>
+        <li><a href="#">AdWatch</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </nav>
 
-    Better-Dressed People
-      Women’s
-      Men’s
-      On the Street
-      The Catwalk
-      AdWatch
-      About
-
-    11/12/13
-    On the Street in Brooklyn
-     <!-- INSERT IMG and PATH -->
-    Cray culpa stumptown, flexitarian ex Odd Future do fugiat Wes Anderson proident 3 wolf moon officia bitters small batch. Et consequat do, nulla you probably haven’t heard of them High Life scenester. Vinyl fugiat High Life, kogi do VHS in aliqua lo-fi leggings gentrify Neutra tumblr. Odio vegan PBR, Marfa forage blue bottle try-hard readymade meggings retro delectus Echo Park. Ugh consectetur farm-to-table forage, laboris blue bottle McSweeney’s tattooed excepteur yr. Magna ut Schlitz flexitarian, vinyl craft beer proident yr forage 8-bit ethical sustainable placeat retro. Officia pickled beard, adipisicing gluten-free sint craft beer quis thundercats id 3 wolf moon fashion axe.
-    Continues...
-
-    11/11/13
-    Vintage in Vogue
-    <!-- INSERT IMG and PATH -->
-    Selfies sunt Tumblr, delectus small batch DIY umami sint. Polaroid chambray selfies McSweeney's Cosby sweater, Pitchfork tattooed assumenda Wes Anderson Blue Bottle twee Carles ennui. Nisi locavore fugiat sapiente salvia aliqua. Shoreditch kogi exercitation fashion axe. Wolf semiotics Pinterest, laboris quis master cleanse tousled small batch street art bespoke fingerstache dreamcatcher ethical labore. Dreamcatcher iPhone typewriter, tote bag four loko fanny pack master cleanse organic PBR reprehenderit actually. Craft beer drinking vinegar wayfarers, pork belly narwhal pariatur polaroid cupidatat in 8-bit distillery anim literally.
-    Continues...
-
-      About Us
-      Sartre’s List is u salvia, fixie mumblecore ex aesthetic qui minim blog cliche. Retro disrupt keytar PBR, delectus consectetur flexitarian fingerstache selfies nostrud Schlitz. Tempor Wes Anderson banh mi bicycle rights. Eu occaecat Williamsburg yr letterpress, biodiesel plaid tote bag cliche messenger bag lomo bespoke sapiente next level.
-      More&hellip;
-      <img src="http://placehold.it/300x250&text=Ad" alt="ad stuff">
-    Popular Posts
-    10 Things Not to Wear on the Red Carpet
-    Valhalla at The Met Gala
-    Jeans: To Fray or Not to Fray
-    “Trashion” is in This Season
-    Back to School in Pencil Skirts
-    Fall Season Preview
-    Even More Ways to Wrap a Sari!
-    Is Steam Punk Here to Stay?
-    Neighborhoodie Watch
-    Hair Styles of the Damned
-
-    Home
-    Women’s
-    Men’s
-    On the Street
-    The Catwalk
-    AdWatch
-    About
-    Tips
-
-    &copy; 2013 Valet Industries, Inc.
-    </body>
-    </html>
+    <main>
+        <article>
+            <time>11/12/13</time>
+            <h2>On the Street in Brooklyn</h2>
+            <img src="img/fashion_photo.jpeg" alt="woman head butts wall">
+            <p>Cray culpa stumptown, flexitarian ex Odd Future do fugiat Wes Anderson proident 3 wolf moon officia bitters small batch. Et consequat do, nulla you probably haven’t heard of them High Life scenester. Vinyl fugiat High Life, kogi do VHS in aliqua lo-fi leggings gentrify Neutra tumblr. Odio vegan PBR, Marfa forage blue bottle try-hard readymade meggings retro delectus Echo Park. Ugh consectetur farm-to-table forage, laboris blue bottle McSweeney’s tattooed excepteur yr. Magna ut Schlitz flexitarian, vinyl craft beer proident yr forage 8-bit ethical sustainable placeat retro. Officia pickled beard, adipisicing gluten-free sint craft beer quis thundercats id 3 wolf moon fashion axe.</p>
+            <p><a href="#">Continues...</a></p>
+        </article>
+        <article>
+            <time>11/11/13</time>
+            <h2>Vintage in Vogue</h2>
+            <img src="img/fashion_photo2.jpeg" alt="soft focus">
+            <p>Selfies sunt Tumblr, delectus small batch DIY umami sint. Polaroid chambray selfies McSweeney's Cosby sweater, Pitchfork tattooed assumenda Wes Anderson Blue Bottle twee Carles ennui. Nisi locavore fugiat sapiente salvia aliqua. Shoreditch kogi exercitation fashion axe. Wolf semiotics Pinterest, laboris quis master cleanse tousled small batch street art bespoke fingerstache dreamcatcher ethical labore. Dreamcatcher iPhone typewriter, tote bag four loko fanny pack master cleanse organic PBR reprehenderit actually. Craft beer drinking vinegar wayfarers, pork belly narwhal pariatur polaroid cupidatat in 8-bit distillery anim literally.</p>
+            <p><a href="#">Continues...</a></p>
+        </article>
+    </main>
+    <aside>
+        <section>
+          About Us
+          Sartre’s List is u salvia, fixie mumblecore ex aesthetic qui minim blog cliche. Retro disrupt keytar PBR, delectus consectetur flexitarian fingerstache selfies nostrud Schlitz. Tempor Wes Anderson banh mi bicycle rights. Eu occaecat Williamsburg yr letterpress, biodiesel plaid tote bag cliche messenger bag lomo bespoke sapiente next level.
+          More&hellip;
+        </section>
+        <section>
+            <img src="http://placehold.it/300x250&text=Ad" alt="ad stuff">
+        </section>
+        <section>
+            <h2>Popular Posts</h2>
+            <ul>
+                <li><a href="#">10 Things Not to Wear on the Red Carpet</a></li>
+                <li><a href="#">Valhalla at The Met Gala</a></li>
+                <li><a href="#">Jeans: To Fray or Not to Fray</a></li>
+                <li><a href="#">“Trashion” is in This Season</a></li>
+                <li><a href="#">Back to School in Pencil Skirts</a></li>
+                <li><a href="#">Fall Season Preview</a></li>
+                <li><a href="#">Even More Ways to Wrap a Sari!</a></li>
+                <li><a href="#">Is Steam Punk Here to Stay?</a></li>
+                <li><a href="#">Neighborhoodie Watch</a></li>
+                <li><a href="#">Hair Styles of the Damned</a></li>
+            </ul>
+        </section>
+    </aside>
+    <footer>
+        <a href="index.html">Home</a>
+          |
+          <a href="#">Women’s</a>
+          |
+          <a href="#">Men’s</a>
+          |
+          <a href="#">On the Street</a>
+          |
+          <a href="#">The Catwalk</a>
+          |
+          <a href="#">AdWatch</a>
+          |
+          <a href="#">About</a>
+          |
+          <a href="#">Tips</a>
+            <p>
+              <small>&copy; 2013 Valet Industries, Inc.</small>
+            </p>
+  </footer>
+</div>
+</body>
+</html>
