--- a/fashion_blog_exercise/fashion_blog_no_markup_starter/index.html
+++ b/fashion_blog_exercise/fashion_blog_no_markup_starter/index.html
@@ -13,30 +13,32 @@
 -->
     <meta charset="utf-8">
     <title>Sartre's List</title>
-    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+
     <link href='css/style.css' rel='stylesheet' type='text.css'>
     </head>
     <html>
     <body>
-    <div class="wrapper">
+    <div id="container">
     <header>
-        <logo>
+
         <h1><a href="index.html">Sartre’s List</a></h1>
-        </logo>
-        <tagline>
+
+
         <h2>Better-Dressed People</h2>
-        </tagline>
+
+        <nav>
+              <ul>
+                <li><a href="#">Women’s</a></li>
+                <li><a href="#">Men’s</a></li>
+                <li><a href="#">On the Street</a></li>
+                <li><a href="#">The Catwalk</a></li>
+                <li><a href="#">AdWatch</a></li>
+                <li><a href="#">About</a></li>
+              </ul>
+        </nav>
+
     </header>
-    <nav>
-      <ul>
-        <li><a href="#">Women’s</a></li>
-        <li><a href="#">Men’s</a></li>
-        <li><a href="#">On the Street</a></li>
-        <li><a href="#">The Catwalk</a></li>
-        <li><a href="#">AdWatch</a></li>
-        <li><a href="#">About</a></li>
-      </ul>
-    </nav>
+
 
     <main>
         <article>
@@ -56,14 +58,14 @@
     </main>
     <aside>
         <section>
-          About Us
+          <h3>About Us</h3>
           Sartre’s List is u salvia, fixie mumblecore ex aesthetic qui minim blog cliche. Retro disrupt keytar PBR, delectus consectetur flexitarian fingerstache selfies nostrud Schlitz. Tempor Wes Anderson banh mi bicycle rights. Eu occaecat Williamsburg yr letterpress, biodiesel plaid tote bag cliche messenger bag lomo bespoke sapiente next level.
           More&hellip;
         </section>
         <section>
             <img src="http://placehold.it/300x250&text=Ad" alt="ad stuff">
         </section>
-        <section>
+        <section id="popular">
             <h2>Popular Posts</h2>
             <ul>
                 <li><a href="#">10 Things Not to Wear on the Red Carpet</a></li>
